modal z-index fixed

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -50,6 +50,7 @@
   height: 100%;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
 }
 
 .t1-modal-header {
